Bug 382848 - Broken kxmlgui initialization
Summary: Broken kxmlgui initialization
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR critical
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-07-28 10:05 UTC by Fabian Vogt
Modified: 2017-07-28 12:07 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 17.07.90
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Fabian Vogt 2017-07-28 10:05:44 UTC
https://commits.kde.org/dolphin/cf273cd8a90178460c29b97b115a876fbef10295 is broken as resources from static libraries are not loaded automatically: 
https://wiki.qt.io/QtResources#Q_INIT_RESOURCE
This results in half of the UI missing: https://openqa.opensuse.org/tests/457381#step/dolphin/5
Comment 1 Elvis Angelaccio 2017-07-28 11:42:57 UTC
https://phabricator.kde.org/D6958
Comment 2 Elvis Angelaccio 2017-07-28 12:07:02 UTC
Git commit 594a36783471fb3f8b23a2b543010d3c9d4cc878 by Elvis Angelaccio.
Committed on 28/07/2017 at 12:05.
Pushed by elvisangelaccio into branch 'Applications/17.08'.

Fix loading of dolphinui.rc

dolphin.qrc is compiled into a static library, which means we need to
force its loading with the Q_INIT_RESOURCE macro.

See http://doc.qt.io/qt-5/resources.html#using-resources-in-a-library
FIXED-IN: 17.07.90

Differential Revision: https://phabricator.kde.org/D6958

M  +2    -0    src/dolphinmainwindow.cpp

https://commits.kde.org/dolphin/594a36783471fb3f8b23a2b543010d3c9d4cc878