Fix loading of dolphinui.rc

dolphin.qrc is compiled into a static library, which means we need to
force its loading with the Q_INIT_RESOURCE macro.

See http://doc.qt.io/qt-5/resources.html#using-resources-in-a-library

BUG: 382848
FIXED-IN: 17.07.90

Differential Revision: https://phabricator.kde.org/D6958